[package]
name = "axdriver"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "ChengXiang Qi <kuangjux@outlook.com>",
]
description = "ArceOS device drivers"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axdriver"
documentation = "https://arceos-org.github.io/arceos/axdriver/index.html"

[features]
dyn = ["axhal/alloc", "dep:rdrive", "dep:axmm", "dep:axalloc", "dep:arm-gic-driver"]
intc = []
bus-mmio = []
bus-pci = ["dep:axdriver_pci", "dep:axhal", "dep:axconfig"]
net = ["axdriver_net"]
block = ["axdriver_block"]
display = ["axdriver_display"]

# Enabled by features `virtio-*`
virtio = ["axdriver_virtio", "dep:axalloc", "dep:axhal", "dep:axconfig"]

# various types of drivers
virtio-blk = ["block", "virtio", "axdriver_virtio/block"]
virtio-net = ["net", "virtio", "axdriver_virtio/net"]
virtio-gpu = ["display", "virtio", "axdriver_virtio/gpu"]
ramdisk = ["block", "axdriver_block/ramdisk"]
bcm2835-sdhci = ["block", "axdriver_block/bcm2835-sdhci"]
rk3568-emmc = [
    "block",
    "dyn",
    "dep:rk3568_driver_block",
    "dep:rk3568_driver_clk",
    "rk3568-cru"
]
rk3568-cru = ["dep:rk3568_driver_clk"]
ixgbe = ["net", "axdriver_net/ixgbe", "dep:axalloc", "dep:axhal", "dep:axdma"]
fxmac = ["net", "axdriver_net/fxmac", "dep:axalloc", "dep:axhal", "dep:axdma"]
# more devices example: e1000 = ["net", "axdriver_net/e1000"]

default = ["bus-pci"]

[dependencies]
log = "=0.4.21"
cfg-if = "1.0"
crate_interface = "0.1.4"
axdriver_base = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2" }
axdriver_block = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", optional = true }
axdriver_net = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", optional = true }
axdriver_display = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", optional = true }
axdriver_pci = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", optional = true }
axdriver_virtio = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", optional = true }
axalloc = { workspace = true, optional = true }
axhal = { workspace = true, optional = true }
axconfig = { workspace = true, optional = true }
axdma = { workspace = true, optional = true }
rdrive = { workspace = true, optional = true }
axmm = { workspace = true, optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm-gic-driver = { version = "0.13", optional = true }
rk3568_driver_clk = { git = "https://github.com/arceos-hypervisor/rk3568_driver_crates.git", tag = "v0.1.1", optional = true }
rk3568_driver_block = { git = "https://github.com/arceos-hypervisor/rk3568_driver_crates.git", tag = "v0.1.1", optional = true }
